<resources>
    <string name="app_name" translatable="false">Ivelt</string>
    <string name="action_settings" translatable="false"></string>
    <string name="file_chooser" translatable="false"></string>
    <string name="file_chooser_default" translatable="false"></string>
    <string name="file_chooser_custom" translatable="false"></string>
    <string-array name="notification_settings">
        <item>Every minute</item>
        <item>Once in 5 minutes</item>
        <item>Once in 10 minutes</item>
        <item>Once in 15 minutes</item>
        <item>Once every half hour</item>
        <item>Once every hour</item>
        <item>Once in 2 hours</item>
        <item>Once in 3 hours</item>
        <item>Once in 6 hours</item>
        <item>Once in 12 hours</item>
        <item>Once a day</item>
        <item>Never</item>
    </string-array>
    <string-array name="notification_settings_entries">
        <item>Every minute</item>
        <item>Once in 5 minutes</item>
        <item>Once in 10 minutes</item>
        <item>Once in 15 minutes</item>
        <item>Once every half hour</item>
        <item>Once every hour</item>
        <item>Once in 2 hours</item>
        <item>Once in 3 hours</item>
        <item>Once in 6 hours</item>
        <item>Once in 12 hours</item>
        <item>Once a day</item>
        <item>Never</item>
    </string-array>
    <string-array name="post_settings">
        <item>Every 20 seconds</item>
        <item>Every 40 seconds</item>
        <item>Every minute</item>
        <item>Never</item>
    </string-array>
    <string-array name="post_settings_entries">
        <item>Every 20 seconds</item>
        <item>Every 40 seconds</item>
        <item>Every minute</item>
        <item>Never</item>
    </string-array>
    <string name="new_posts">Check for new Posts</string>
    <string name="open_notification">Open Notification</string>
    <string name="when_plugged_in">When Plugged in…</string>
    <string name="default_page_title">Default Page</string>
    <string name="plugged_in_summary">How often should the app check for notifications when plugged in?</string>
    <string name="battery_title">When on battery…</string>
    <string name="battery_summary">How often should the app check for notifications when on battery?</string>
    <string name="pause_summary">Pause notifications. Your scheduled update times will be saved.</string>
    <string name="posts_summary">How often should the app check for new posts?</string>
    <string name="pause_title">Pause Notifications</string>
    <string name="other_notification_title">Other Notification Settings</string>
    <string name="notification_settings_title">Notification Settings</string>
    <string name="notification_settings_summary">Go to the Notification Settings page on your phone. You can change the settings for the notification channels.</string>
    <string name="tap_title">Notification Tap</string>
    <string name="tap_summary">When I tap on a notification…</string>
    <string name="other_settings_title">Other Settings</string>
    <string name="logs_summary">We do not collect logs. Logs will be sent only when you click on share logs.</string>
    <string name="logs_title">Share Logs</string>
    <string name="default_page_summary">When the app opens, go to…</string>
    <string name="language_title">Language</string>
    <string name="language_summary">The language for the settings page.</string>
    <string name="check_for_notifications">Check for Notifications…</string>
    <string name="app_settings">App Settings</string>
    <string name="firebase_title">Enable Automatic Crash Reporting</string>
    <string name="firebase_summary"><![CDATA[This will allow us to find & fix bugs faster.]]></string>
    <string name="crash_collection_dialog_title">Crash Collection</string>
    <string name="crash_collection_dialog_message">Turn on automatic crash collection? This will help us fix bugs quicker.</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="error_sending_logs">error getting logs</string>
    <string name="logout_title">Erase Login Details</string>
    <string name="logout_summary">If you have saved login details, you can erase them now.</string>
    <string name="dismiss">Dismiss</string>
    <string name="mark_read">Mark as read</string>
    <string name="hidden_title">Hidden Buttons</string>
    <string name="hidden_summary">Choose which buttons should be hidden</string>
    <string name="shortcut_label">Sign Out</string>
    <string name="ivelt_settings_title">iVelt Settings</string>
    <string name="swipe_settings">Swipe Settings</string>
    <string name="one_finger_swipe">One Finger Swipe</string>
    <string name="one_finger_swipe_summary">Enable One Finger Swipe for Back and Forward</string>
    <string name="two_finger_swipe">Two Finger Swipe</string>
    <string name="two_finger_swipe_summary">Enable Two Finger Swipe for Navigating Pages</string>

    <string name="app_password_title">App Password</string>
    <string name="app_password_summary">Set The App Password</string>
    <string name="sefaria_title">Sefaria Linker</string>
    <string name="sefaria_summary">Add Sefaria Linker to The App</string>    

    <string-array name="click_settings_values">
        <item>Open Notification</item>
        <item>Open Main Page</item>
        <item>Dismiss Notification</item>
    </string-array>
    <string-array name="click_settings_entries">
        <item>@string/open_notification</item>
        <item>Open Main Page</item>
        <item>Dismiss Notification</item>
    </string-array>
    <string-array name="pages_entries">
        <item>Main Page</item>
        <item>Your Posts</item>
        <item>New Posts</item>
        <item>Unread Posts</item>
        <item>Active Topics</item>
        <item>Notification Page</item>
    </string-array>
    <string-array name="pages_values">
        <item>https://www.ivelt.com/forum/index.php</item>
        <item>https://www.ivelt.com/forum/search.php?search_id=egosearch</item>
        <item>https://www.ivelt.com/forum/search.php?search_id=newposts</item>
        <item>https://www.ivelt.com/forum/search.php?search_id=unreadposts</item>
        <item>https://www.ivelt.com/forum/search.php?search_id=active_topics</item>
        <item>https://www.ivelt.com/forum/ucp.php?i=ucp_notifications</item>
    </string-array>
    <string-array name="language_entries">
        <item>English</item>
        <item>אידיש</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>yi</item>
    </string-array>
    <string-array name="swipe_values">
        <item>rtl</item>
        <item>ltr</item>
        <item>lang</item>
    </string-array>
    <string-array name="swipe_entries">
        <item>Right to Left is Forward</item>
        <item>Left to Right is Forward</item>
        <item>Follow language</item>
    </string-array>
    <string-array name="hidden_button_entries">
        <item>Mark Unread Button</item>
        <item>Report Button</item>
        <item>Quote Button</item>
        <item>Fix Button</item>
        <item>Quote Last Button</item>
        <item>Delete Button</item>
        <item>Share Button</item>
        <item>Copy to iVelt</item>
        <item>Private Message</item>
        <item>Mention</item>
        <item>Contact Button</item>
    </string-array>
    <string-array name="hidden_button_values">
        <item>i.icon.fa-file.fa-fw</item>
        <item>i.icon.fa-exclamation.fa-fw</item>
        <item>i.icon.fa-quote-left.fa-fw</item>
        <item>i.icon.fa-pencil.fa-fw</item>
        <item>i.icon.fa-quote-left.last.fa-fw</item>
        <item>i.icon.fa-times.fa-fw</item>
        <item>i.icon.fa-share-alt.fa-fw</item>
        <item>i.icon.fa-copy.fa-fw</item>
        <item>i.icon.fa-commenting.fa-fw</item>
        <item>i.icon.fa-at.fa-fw</item>
        <item>.profile-contact</item>
    </string-array>
    <string-array name="hidden_default">
        <item>i.icon.fa-commenting.fa-fw</item>
    </string-array>

    <string-array name="hidden_button_entries_flip">
        <item>Mark Unread Button</item>
        <item>Report Button</item>
        <item>Quote Button</item>
        <item>Fix Button</item>
        <item>Quote Last Button</item>
        <item>Delete Button</item>
        <item>Copy to iVelt</item>
        <item>Private Message</item>
        <item>Mention</item>
        <item>Contact Button</item>
    </string-array>

    <string-array name="hidden_button_values_flip">
        <item>i.icon.fa-file.fa-fw</item>
        <item>i.icon.fa-exclamation.fa-fw</item>
        <item>i.icon.fa-quote-left.fa-fw</item>
        <item>i.icon.fa-pencil.fa-fw</item>
        <item>i.icon.fa-quote-left.last.fa-fw</item>
        <item>i.icon.fa-times.fa-fw</item>
        <item>i.icon.fa-copy.fa-fw</item>
        <item>i.icon.fa-commenting.fa-fw</item>
        <item>i.icon.fa-at.fa-fw</item>
        <item>.profile-contact</item>
    </string-array>
</resources>
