<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_settings">
        <ListPreference
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="en"
            android:key="language"
            android:title="@string/language_title"
            android:icon="@drawable/ic_baseline_language_24"
            android:summary="@string/language_summary"/>
        <ListPreference
            android:defaultValue="http://www.ivelt.com/forum/index.php"
            android:entries="@array/pages_entries"
            android:entryValues="@array/pages_values"
            android:icon="@drawable/ic_baseline_app_shortcut_24"
            android:key="default_page"
            android:summary="@string/default_page_summary"
            android:title="@string/default_page_title" />
        <!--ListPreference/-->
        <CheckBoxPreference
            android:key="firebase"
            android:icon="@drawable/ic_baseline_bug_report_24"
            android:title="@string/firebase_title"
            android:summary="@string/firebase_summary"
            />
        <Preference
            android:key="logout"
            android:title="@string/logout_title"
            android:icon="@drawable/ic_baseline_logout_24"
            android:summary="@string/logout_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/check_for_notifications">
        <ListPreference
            android:defaultValue="Never"
            android:entries="@array/notification_settings_entries"
            android:entryValues="@array/notification_settings"
            android:icon="@drawable/ic_baseline_power_24"
            android:key="plugged_in"
            android:summary="@string/plugged_in_summary"
            android:title="@string/when_plugged_in" />

        <ListPreference android:title="@string/battery_title"
            android:icon="@drawable/ic_baseline_battery_full_24"
            android:defaultValue="Never"
            android:entryValues="@array/notification_settings"
            android:summary="@string/battery_summary"
            android:key="battery"
            android:entries="@array/notification_settings_entries"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_baseline_notifications_paused_24"
            android:defaultValue="false"
            android:summary="@string/pause_summary"
            android:title="@string/pause_title"
            android:key="pause_notifications"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other_notification_title">
    <Preference
        android:key="APP_NOTIF"
        android:title="@string/notification_settings_title"
        android:icon="@drawable/ic_baseline_edit_notifications_24"
        android:summary="@string/notification_settings_summary"
        >
        <intent android:action="android.settings.APP_NOTIFICATION_SETTINGS"/>
        <!--extra
            android:name="android.provider.extra.APP_PACKAGE"
            android:value="com.kfmdmsolutions.ivelt"/-->
    </Preference>
    <ListPreference
        android:key="click"
        android:title="@string/tap_title"
        android:defaultValue="@string/open_notification"
        android:entryValues="@array/click_settings_values"
        android:entries="@array/click_settings_entries"
        android:summary="@string/tap_summary"
        android:icon="@drawable/ic_baseline_click_24"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_settings_title">

        <Preference
            android:icon="@drawable/ic_baseline_file_copy_24"
            android:key="Logs"
            android:summary="@string/logs_summary"
            android:title="@string/logs_title" />

    </PreferenceCategory>

</PreferenceScreen>